Fix dialog width on small devices

--- a/src/app/admin/dialogs/domain-dialog/domain-dialog.component.scss
+++ b/src/app/admin/dialogs/domain-dialog/domain-dialog.component.scss
@@ -20,8 +20,13 @@ mat-form-field {
 .specialization-row {
     display: flex;
     align-items: center;
+    width: 100%;
+
+    .flex-spacer {
+        min-width: 0;
+    }
 
     button {
-        margin-bottom: 15px;
+        margin-bottom: 22px;
     }
 }
