--- a/src/app/teacher/dialogs/teacher-offer-dialog/teacher-offer-dialog.component.scss
+++ b/src/app/teacher/dialogs/teacher-offer-dialog/teacher-offer-dialog.component.scss
@@ -5,7 +5,6 @@
 
 mat-form-field {
     display: block;
-    min-width: 600px;
 }
 
 .select-spinner {
