--- a/src/styles.scss
+++ b/src/styles.scss
@@ -272,4 +272,8 @@ app-loading.in-dialog {
     scrollbar-width: thin;
     /* MS */
     -ms-overflow-style: -ms-autohiding-scrollbar;
-  }
+}
+
+.flex-spacer {
+    flex: 1;
+}
